# villoc

./: LICENSE.md  README.md  index.html  villoc.py
dtracetool/: README.md  memtrace.d
dtracetool/tests/: Makefile  test1.c  test2.c  test3.c
ld_preload/: Makefile  mallhook.c
pintool/: README.md  makefile.rules  pintool.cpp
tests/: libc.c
tracers/dynamorio/: CMakeLists.txt  README.md  build.sh  villoc_tracer.c
tracers/ld_preload/: mallocprint.c
tracers/pintool/: makefile  pintool.cpp
